@@ -89,6 +89,11 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 	Fixed EventTests: memory leaks, dangling pointer and logic
 	Added support for gestures in OSX
 
+* Ricardo Sánchez-Sáez (https://github.com/rsanchezsaez)
+	Added "stackable" support for Move Actions
+	Added Test case for stackable Move actions
+	Added Performance test for stackable Move actions
+
 * Robert J Payne (http://www.zwopple.com/)
 	Initial PVR v3 file format support
 
