@@ -381,7 +381,7 @@ typedef enum {
 
 //! delta time type
 //! if you want more resolution redefine it as a double
-typedef float ccTime;
+typedef CGFloat ccTime;
 //typedef double ccTime;
 
 typedef float ccMat4[16];
